@@ -33,6 +33,7 @@
 	* Light is classified as matter spell type, not divination (affects only new games)
 	* Nerf The Eye of the Aethiopica energy production
 	* Partly eaten corpses are worthless for sacrificing
+	* Potion of water used against iron golems are more effective
 
 2012-04-01  UnNetHack 4.0.0
 	* Uncursed and blessed scrolls of magic mapping reveal secret doors
